create user and job posting model

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL="mongodb+srv://nahomzenebe123:jtjANSepMqPqjV94@cluster0.rlvov0q.mongodb.net/SiraFinder?retryWrites=true&w=majority&appName=Cluster0"
+MONOGDB_URL="mongodb+srv://nahomzenebe123:jtjANSepMqPqjV94@cluster0.rlvov0q.mongodb.net/SiraFinder?retryWrites=true&w=majority&appName=Cluster0"
 
 
 
